--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=], initial-scale=1.0" />
     <title>About-us</title>
-</head>
-<body>
-    <h1>About-us</h1><br>
+  </head>
+  <body>
+    <h1>About-us</h1>
+    <br />
     <a href="index.html">Back</a>
-</body>
+
+    <div>
+      <header>
+
+      </header>
+    </div>
+    <div>
+        <nav>
+            
+        </nav>
+    </div>
+    <div>
+      <section><!--*Contéudo-->
+
+      </section>
+    </div>
+
+    <div>
+      <footer><!--*Rodapé-->
+
+      </footer>
+    </div>
+  </body>
 </html>
