--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
             <h1>Estudos sobre CSS</h1>
         </header>
     </div>
-   
-    <div>
-        <nav><!--*Menu-->
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+   <div>
+        <nav class="navBar"><!--*Menu-->
+            <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
+            <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
+            <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
         </nav>
     </div>
    
