--- a/team.html
+++ b/team.html
@@ -8,5 +8,26 @@
 <body>
     <h1>Team</h1><br>
     <a href="index.html">Back</a>
+    <div>
+        <header>
+  
+        </header>
+      </div>
+      <div>
+          <nav>
+              
+          </nav>
+      </div>
+      <div>
+        <section><!--*Contéudo-->
+  
+        </section>
+      </div>
+  
+      <div>
+        <footer><!--*Rodapé-->
+  
+        </footer>
+      </div>
 </body>
 </html>
