new commit - Styles
Added new CSS features

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div>
         <header class="topHeader"><!--*Cabeçalho-->
             <h1>Estudos sobre CSS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deleniti sit debitis suscipit alias error, magni tenetur, iure unde incidunt molestias qui vero quis quos sint nulla? A, accusantium exercitationem.</p>
         </header>
     </div>
    <div>
         <nav class="navBar"><!--*Menu-->
-            <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
+            <a class="botão" href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
             <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
             <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
         </nav>
@@ -22,7 +23,7 @@
    
     <div>
         <section><!--*Contéudo-->
-
+            
         </section>
     </div>
    
@@ -33,3 +34,5 @@
     </div>
 </body>
 </html>
+
+
