new commit - new features
new text features and margin features, hover features and much more

--- a/about-us.html
+++ b/about-us.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=], initial-scale=1.0" />
     <title>About-us</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <h1>About-us</h1>
     <br />
-    <a href="index.html">Back</a>
-
     <div>
-      <header>
-
+      <header class="topHeader">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deleniti sit debitis suscipit alias error, magni tenetur, iure unde incidunt molestias qui vero quis quos sint nulla? A, accusantium exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aliquid sint, perferendis architecto voluptate minima sapiente temporibus quibusdam tempore ut perspiciatis tempora facilis totam assumenda, ducimus, enim exercitationem aperiam modi.</p>
+        <p id="pteste">
+          300x150
+        </p>
       </header>
     </div>
     <div>
         <nav>
-            
+          <a class="botão" href="index.html">Back</a>   
         </nav>
     </div>
     <div>
