--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
    <div>
         <nav class="navBar"><!--*Menu-->
-            <a class="botão" href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
+            <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
             <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
             <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
         </nav>
