--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>News</title>
+    <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
     <h1>News</h1><br>
