--- a/team.html
+++ b/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Team</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Team</h1><br>
