Links CSS Features
New Link personalizations types and featues

--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <nav>
-          <a class="botão" href="index.html">Back</a>   
+          <a class="botao5" href="index.html">Back</a>   
         </nav>
     </div>
     <div>
