--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
             <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
             <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
+            <a href="other-page.html" target="_self">Other Page</a> &nbsp;&nbsp;
         </nav>
     </div>
    
