New Position features types

--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div>
-        <h1 class="borda">Meu primeiro CSS</h1>
-        <ul class="borda">
-            <li class="azul">Primero item</li>
-            <li class="verde">Segundo item</li>
-            <li class="vermelho">Terceiro item</li>
-        </ul>
+    <h1 class="borda">Meu primeiro CSS</h1>
+   
+    <div class="container">
+        <div class="div1">Primeira Div</div>
+        <div class="div2">Segunda Div</div>
+        <div class="div3">Terceira Div</div>
+    </div>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, iusto? Blanditiis modi perferendis, porro ipsum commodi id est totam soluta vel minima, beatae quasi explicabo quas qui! Quos, natus qui.</p>
+    <p>Impedit velit quo quisquam nostrum illo facere magnam iusto id molestias odio recusandae minima in voluptatum cum temporibus explicabo sapiente repellendus nobis, quam officiis, accusamus architecto quibusdam mollitia! Eveniet, accusantium.</p>
+    <p>Recusandae architecto nulla consequuntur placeat incidunt illo eum neque inventore aspernatur, necessitatibus dolorem quae optio maxime qui, consequatur natus eos dolorum nisi praesentium nemo distinctio exercitationem iusto. Vel, totam sit!</p>
+    <p>Sed corporis minus eaque impedit quidem nostrum earum non amet, esse sapiente architecto necessitatibus inventore hic, cumque unde in, suscipit velit aliquid ab possimus accusantium facere ex? Quas, magnam excepturi!</p>
+    <p>Eveniet quis quidem perferendis rerum suscipit quisquam doloribus, esse, tempora dolorum, facilis eos. Enim fuga rerum nesciunt voluptates quo nostrum non qui iure sed asperiores quia, magnam voluptatem voluptatum impedit!</p>
+    <p>Provident aspernatur deleniti et sed corrupti culpa, quos, ut eveniet ipsum quisquam sequi nemo voluptatibus incidunt, delectus eligendi accusamus pariatur aut rerum. Aliquam omnis aspernatur suscipit sapiente quis doloribus saepe.</p>
+    <p>Explicabo alias illum quae assumenda laudantium autem ad sit asperiores! Explicabo incidunt voluptates blanditiis ipsa totam, optio tempora cupiditate, nemo quibusdam nulla quo animi expedita aut impedit magnam placeat ea.</p>
+    <p>Veritatis voluptatibus aperiam vero, quia delectus neque illum, dicta iure, ipsum reiciendis odit? Quod pariatur voluptatibus fuga, similique tempora alias magnam, reprehenderit eum soluta excepturi error cum, esse adipisci temporibus.</p>
+    <p>Suscipit vitae maiores tenetur. A, itaque soluta! Odit, sint minus natus assumenda voluptatem quidem voluptas harum maiores consectetur, error nostrum, temporibus est dolorum perferendis eveniet pariatur et enim nam soluta.</p>
+    <p>Ea molestias consectetur perspiciatis aut expedita rerum inventore ipsa iusto fugit voluptatum commodi consequatur officiis assumenda consequuntur ex quam, quas aliquid fugiat temporibus deleniti ad? Quae exercitationem libero expedita temporibus.</p>
+    <p>Culpa maxime, ea aspernatur, illum similique ab totam suscipit officia vitae labore nobis dolor placeat accusantium qui quia, sequi nihil omnis exercitationem sit! Inventore quae placeat, commodi aperiam assumenda facere.</p>
+    <p>Cumque beatae neque iusto ipsa quam saepe debitis tempora distinctio harum tempore voluptatibus nesciunt dicta magni, maiores numquam sequi fugiat. Ipsam voluptas mollitia sunt inventore! Eaque repellat possimus molestias voluptate.</p>
+
+    <div class="whats">
+        whats
     </div>
   </body>
 </html>
