--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1 class="borda">Meu primeiro CSS</h1>
    
     <div class="container">
-        <div class="div1">Primeira Div</div>
-        <div class="div2">Segunda Div</div>
-        <div class="div3">Terceira Div</div>
+      <img src="img/carro.jpg"> 
+       <div class="centro">
+        <h1>Título do meu projeto</h1>
+      </div>
     </div>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, iusto? Blanditiis modi perferendis, porro ipsum commodi id est totam soluta vel minima, beatae quasi explicabo quas qui! Quos, natus qui.</p>
