--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1 class="borda">Meu primeiro CSS</h1>
-    <div class="exemplo">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In culpa fugiat fuga illum modi, quod quasi incidunt mollitia, sit, cumque consequuntur amet itaque deleniti aliquid nam quis voluptatibus quibusdam quam.</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea iste facere eos suscipit eius recusandae consectetur architecto, atque blanditiis, placeat quidem quod itaque, repellat repudiandae doloremque a odit veritatis quibusdam.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
-      
-    </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident incidunt exercitationem quia maxime facere blanditiis temporibus magnam nihil minima eligendi at earum veniam repellat odio, consectetur nostrum atque perferendis!</p>
+    <h1 class="borda">Meu primeiro CSS</h1> 
     
+    <ul>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li class="login"><a href="#">Login</a></li>
+    </ul>
+
+    <div class="container">
+      <img width="250" height="400" src="img/carro.jpg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, tempore laborum! Velit nisi illo fugiat ipsam, asperiores, voluptates cupiditate doloremque odio natus nobis accusamus esse voluptatibus provident pariatur unde suscipit.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, tempore laborum! Velit nisi illo fugiat ipsam, asperiores, voluptates cupiditate doloremque odio natus nobis accusamus esse voluptatibus provident pariatur unde suscipit.</p>
+      <h3>Outro Titulos</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis eveniet deleniti quidem distinctio non earum nihil quisquam in repudiandae ullam sunt minus nam officia, voluptates tenetur id explicabo perferendis.</p>
+      <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae doloremque quod vel hic ipsum labore recusandae saepe voluptatibus dolores, at consequatur dolorum. Molestias, sit iusto quam magni molestiae vitae soluta!</span><span>Eos omnis sapiente nihil reprehenderit totam nesciunt dolorum, cum laborum illo eius maxime doloribus mollitia velit possimus veritatis delectus porro quas autem sed nulla ipsam. Tenetur perferendis earum impedit quia.</span><span>Iure impedit magnam harum quia modi voluptatum? Soluta velit tempora dignissimos voluptatibus tempore enim id quis quia dolores unde ipsam, commodi ipsum excepturi aliquid natus dolore blanditiis pariatur quisquam cum?</span></p>
+      <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione architecto totam, culpa soluta doloribus nobis, porro, magnam a ex ipsum? Fugiat ab veniam sint ex nemo quaerat dicta corporis?</span><span>Nostrum reprehenderit omnis quaerat inventore eaque nisi error distinctio culpa eum nihil dignissimos hic velit optio magnam voluptatum temporibus iste perspiciatis odio, nobis amet laborum quo! Modi rem accusantium debitis!</span><span>Perferendis, praesentium enim. Est, laboriosam aspernatur vel repudiandae eos voluptatum sapiente magnam fugit vitae a aliquid possimus ad soluta voluptas corporis, repellat nesciunt. Esse voluptatibus cum veritatis suscipit, consequatur necessitatibus?</span></p>
+
+    </div>
+
   </body>
 </html>
