--- a/index.html
+++ b/index.html
@@ -4,36 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div>
-        <header class="topHeader"><!--*Cabeçalho-->
-            <h1>Estudos sobre CSS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deleniti sit debitis suscipit alias error, magni tenetur, iure unde incidunt molestias qui vero quis quos sint nulla? A, accusantium exercitationem.</p>
-        </header>
-    </div>
-   <div>
-        <nav class="navBar"><!--*Menu-->
-            <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
-            <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
-            <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
-            <a href="other-page.html" target="_self">Other Page</a> &nbsp;&nbsp;
-        </nav>
-    </div>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <h1 class="borda">Meu primeiro CSS</h1> 
+    
+    <ul>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li class="dropdown">
+        <a class="dropbtn" href="#">Link</a>
+        <div class="dropdown-content">
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+        </div>
+      </li>
+    </ul>
    
-    <div>
-        <section><!--*Contéudo-->
-            
-        </section>
-    </div>
-   
-    <div>
-        <footer><!--*Rodapé-->
-
-        </footer>
-    </div>
-</body>
+  </body>
 </html>
 
 
