Shadow and Text Shadow Features

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   </head>
   <body>
     
-    <h1 id="titulo" class="red">Meu primeiro CSS</h1> 
-    
+    <h1>Meu primeiro CSS</h1> 
+    <h1 class="branco">Outro Texto</h1>
+    <h1 class="multipla">multiplas Sombras</h1>
 
+    <div class="box">
+      <img src="img/carro.jpg" style="width: 100%;">
+      <h2 style="margin: 8px;">Isso é um card!</h2>
+      <p>Uma simples descrição para demonstração</p>
+    </div>
 
   </body>
 </html>
