--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="box">
       <img src="img/carro.jpg" style="width: 100%;">
-      <h2 style="margin: 8px;">Isso é um card!</h2>
-      <p>Uma simples descrição para demonstração</p>
+      <h2 style="margin-bottom: 0; padding-bottom: 0;" class="reduzido">Isso é um card! Com titulo comprido Isso é um card! Com titulo  Isso é um card! Com titulo  Isso é um card! Com titulo </h2>
+      <p class="reduzido">Uma simples descrição para demonstração Uma simples descrição para demonstração Uma simples descrição para demonstração Uma simples descrição para demonstração Uma simples descrição para demonstração Uma simples descrição para demonstração</p>
     </div>
 
   </body>
