--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="description" content="Um site de Exemplo de Estudo">
+    <meta name="keywords" content="Agência Digital, CSS, HTML">
+    <title>Agência Fake</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        <header class="topHeader"><!--*Cabeçalho-->
-            <h1>Estudos sobre CSS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deleniti sit debitis suscipit alias error, magni tenetur, iure unde incidunt molestias qui vero quis quos sint nulla? A, accusantium exercitationem.</p>
-        </header>
+  <nav class="navbar">
+    <div class="logo">
+      <h1>Agência Fake</h1>
     </div>
-   <div>
-        <nav class="navBar"><!--*Menu-->
-            <a href="team.html" target="_self">Teams</a>&nbsp; &nbsp;
-            <a href="news.html" target="_self">News</a>&nbsp; &nbsp;
-            <a href="about-us.html" target="_self">About Us</a>&nbsp; &nbsp;
-            <a href="other-page.html" target="_self">Other Page</a> &nbsp;&nbsp;
-        </nav>
+    <div class="menu">
+      <a href="#">Home</a>
+      <a href="#">Sobre Nós</a>
+      <a href="#">Serviços</a>
+      <a id="botao" href="#">Fale Conosco</a>
     </div>
-   
-    <div>
-        <section><!--*Contéudo-->
-            
-        </section>
+  </nav>
+  <header class="header">
+    <div class="headline">
+      <h2>Você achou a melhor</h2>
+      <h2>Agência Digital</h2>
     </div>
-   
-    <div>
-        <footer><!--*Rodapé-->
+    <div class="img-headline">
+      
+    </div>
+  </header>
+  <section>
 
-        </footer>
-    </div>
+  </section>
+  <footer>
+
+  </footer>
 </body>
 </html>
 
