Final Commit - Project Ready
A Fake Agency HMTL and CSS Site.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Agência Digital, CSS, HTML">
     <title>Agência Fake</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 </head>
 <body>
   <nav class="navbar">
@@ -22,20 +23,60 @@
   </nav>
   <header class="header">
     <div class="headline">
-      <h2>Você achou a melhor</h2>
-      <h2>Agência Digital</h2>
+      <h2 style="letter-spacing: 10px;">Você achou a melhor</h2>
+      <h2 style="font-size: 80px;">Agência Digital</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos qui unde ipsa quam. Libero voluptatem sed iste tempora neque fugiat nisi, quidem magni blanditiis fuga, unde facere molestias esse laboriosam.</p>
+      <a href="#" class="contact-btn">Contrate agora</a>
     </div>
     <div class="img-headline">
-      
+      <img styele="max-width:90%" src="/img/hero_right.png">
     </div>
   </header>
   <section>
-
+    <h2>O que podemos fazer pelo seu negócio?</h2>
+    <div class="serviocos">
+      <div class="card">
+        <img src="img/pc.png">
+        <div class="card-text">
+          <h3>Desenvolvimento de Sites</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+        <div class="texto-oculto">
+          <h3>Outro Conteudo</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/smartphone.png">
+        <div class="card-text">
+          <h3>Desenvolvimento de Apps</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+        <div class="texto-oculto">
+          <h3>Outro Conteudo</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/marketing.png">
+        <div class="card-text">
+          <h3>Desenvolvimento de Sites</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+        <div class="texto-oculto">
+          <h3>Outro Conteudo</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse possimus aut voluptatibus eaque fugit omnis corrupti, libero temporibus sunt est ab reiciendis suscipit, commodi, id praesentium maxime illo modi corporis?</p>
+        </div>
+      </div>
+    </div>
   </section>
   <footer>
-
+    <div class="logo-rodape">
+      <h1 class="agencia">Agência Fake</h1>
+      <p style="color:white">Um site feito com HTML e CSS Puro</p>
+      <b class="copy" style="color:white">© Todos os direitos reservados</b>
+    </div>
   </footer>
+  <a class="whats" href="#"><img style="width: 70px;" src="img/whats.png"></a>
 </body>
 </html>
-
-
